tests/failing/LiftNested.run
ghc -dcore-lint -package ghc -itests -itests/failing LiftNested --make -main-is LiftNested >/dev/null &&
tests/failing/LiftNested
